# key-r-chat

./: .gitignore  openapi.json
backend/: .env  Cargo.toml  db.sql  exp.rs
backend/src/: main.rs
backend/src/lib/: context.rs  errors.rs  mod.rs  tests.rs
backend/src/lib/database/: entities.rs  mod.rs  rb_db.rs
backend/src/lib/error/: errors.rs
backend/src/lib/error/rej_derive/src/: lib.rs
backend/src/lib/errors/: errors.rs
backend/src/lib/errors/rej_derive/: Cargo.toml
backend/src/lib/errors/rej_derive/src/: lib.rs
backend/src/lib/replies/: entities.rs
backend/src/lib/replyes/: entities.rs
backend/src/lib/requests/: entities.rs  implementations.rs  mod.rs  validation.rs
backend/src/lib/route/: functions.rs  macroses.rs  routes.rs
backend/src/lib/routes/: functions.rs  mod.rs  routes.rs
frontend/: README.md  package.json  tsconfig.json
frontend/configs/: .eslintrc  prettier.js  webpack.config.js  webpackDevServer.js
frontend/public/: index.html
frontend/scripts/: build.js  start.js
frontend/source/: App.scss  App.tsx  index.scss  index.tsx
frontend/source/common/: http-service.ts
frontend/source/components/header/: Header.tsx  index.ts
frontend/source/components/private-route/: PrivateRoute.tsx  index.ts
frontend/source/constants/: routes.ts
frontend/source/layout/: Layout.tsx
frontend/source/store/: index.ts  root-reducer.ts
frontend/source/store/auth/: action-creators.ts  actions.ts  reducer.ts
frontend/source/store/settings/: action-creators.ts  (+2 more)
frontend/source/themes/: dark-theme.ts  index.ts  light-theme.ts
(+13 files in other folders)
