[package]
name = "key_r_chat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rej_derive = { path = "src/lib/error/rej_derive/" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.7"
futures = "0.3.16"
tokio-test = "0.4.2"
warp = "0.3.1"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1"
rbatis = "2.0.18"
log = "0.4"
fast_log="1.3"
lazy_static = "1.4.0"
sha2 = "0.9.5"
hmac = "0.11.0"
hex = "0.4.3"
rand = "0.8.4"
chrono = "0.4.19"
dotenv = "0.15.0"